# tdh-biz-doctor-apmv2

./: .gitignore  AGENTS.md  CHANGELOGS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  bacon.toml  bitbucket-pipelines.yml  catalog-info.yaml  compose.yaml  deployment.yaml  devspace.yaml  devspace_start.sh  justfile  manual-build.sh  mkdocs.yml  org.yaml  pending-features.md  release.yaml  rust.Dockerfile  rust.cloudbuild.yaml  skills-lock.json
.github/: catalog-ci.yaml
.github/scripts/: parse_catalog.py  test_catalog_ci.py
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md  config-chat.example.toml  config-video-chat.example.toml  config.example.toml  consultation-openapi.json  doctor-pool-openapi.json
cli/src/: main.rs  openapi.rs
common-rs/: Cargo.toml
common-rs/src/: encrypted_string.rs  lib.rs  text_mask.rs
common-rs/src/config/: http_server.rs  loader.rs  mod.rs
common-rs/src/event/: mod.rs
common-rs/src/event/biz_apm/: consultation_channel.rs  follow_up.rs  identity_model.rs  mod.rs  model.rs  patient_in_take.rs
common-rs/src/event/biz_apm/consultation_event/: v1.rs  v2.rs
common-rs/src/repo/: mod.rs
common-rs/src/tdh_protocol/: internal.rs  mod.rs
common-rs/src/tdh_protocol/appointment/: dolphin_appointment_request.rs  mod.rs  reserve.rs
common-rs/src/tdh_protocol/biz_apm/: appointment.rs  consultation_event.rs  follow_up.rs  summary_note.rs
common-rs/src/tdh_protocol/consultation/: consultation_pre_screen.rs  event.rs  wrapped_session_info.rs
common-rs/src/tdh_protocol/consultation/v2/: session_info.rs
common-rs/src/tdh_protocol/doctor/: profile.rs
common-rs/src/tdh_protocol/payment/: extend_data.rs  payment_summary.rs  payment_transaction.rs
common-rs/src/tdh_protocol/serde_compat/: consultation.rs  consultation_state.rs
common-rs/src/twilio/: callback.rs  chat.rs  jwt.rs  mod.rs  types.rs  video.rs
common-rs/tests/: twilio_test.rs
consultation-bg-rs/: Cargo.toml
consultation-bg-rs/config/: default.toml
consultation-bg-rs/src/: common.rs  main.rs
consultation-bg-rs/src/appointment_hold/: mod.rs  repo.rs  service.rs  worker.rs
consultation-bg-rs/src/doctor_identity/: auth.rs  handler.rs  mod.rs  model.rs  repo.rs  service.rs
consultation-bg-rs/src/doctor_timeslot/: mod.rs
consultation-bg-rs/src/event/: mod.rs
consultation-bg-rs/src/event_outbox/: mod.rs  repo.rs  service.rs  worker.rs
consultation-bg-rs/src/payment_confirm/: handler.rs  mod.rs  payement_token.rs  repo.rs  service.rs
consultation-bg-rs/src/sys/: config.rs
consultation-rs/: .env.example  .gitignore  Cargo.toml  README.md
consultation-rs/.config/: nextest.toml
consultation-rs/config/: default.toml  default.toml.example  local.toml.example  rtdb.rules.json
consultation-rs/openapi/: redoc.html  swagger.html
consultation-rs/src/: lib.rs  main.rs
consultation-rs/src/appointment/: mod.rs  state.rs  types.rs
consultation-rs/src/appointment/consultation_summary/: CONTEXT.md  handler.rs  model.rs  repo.rs  service.rs
consultation-rs/src/appointment/get_detail/: handler.rs  model.rs  repo.rs  service.rs
consultation-rs/src/appointment/hold/: create.rs  handler.rs  mod.rs  model.rs  repo.rs  service.rs  state.rs
consultation-rs/src/appointment/list/: handler.rs  model.rs  repo.rs  service.rs
consultation-rs/src/appointment/reserved_timeslots/: handler.rs
consultation-rs/src/booking/: mod.rs
consultation-rs/src/common/: infrastructure.rs  mod.rs
consultation-rs/src/common/handlers/: http_error.rs  middleware.rs  mod.rs
consultation-rs/src/common/twilio/: client.rs  mock.rs  mod.rs
consultation-rs/src/consultation/: mod.rs  state.rs
consultation-rs/src/consultation/common/: mod.rs
consultation-rs/src/consultation/end_session/: handler.rs  repo.rs  service.rs
consultation-rs/src/consultation/facial_upload/: handler.rs  mod.rs  repo.rs  service.rs
consultation-rs/src/consultation/patient_verification/: handler.rs  repo.rs  service.rs
consultation-rs/src/consultation/session_info/: handler.rs  mod.rs  repo.rs  rtdb_access.rs  service.rs
consultation-rs/src/consultation_config/: handler.rs  mod.rs  model.rs  repo.rs  service.rs  validate.rs  window.rs
consultation-rs/src/doctor_timeslot/: mod.rs  state.rs
consultation-rs/src/doctor_timeslot/configuration_events/: model.rs
consultation-rs/src/doctor_timeslot/get_timeslot/: handler.rs  model.rs  repo.rs  service.rs
consultation-rs/src/doctor_timeslot/reserved_timeslot/: handler.rs  model.rs  repo.rs  service.rs
consultation-rs/src/infra/event/: mod.rs  outbox.rs  publisher.rs
consultation-rs/src/internal/: handlers.rs  mod.rs  repo.rs  service.rs
consultation-rs/src/openapi/: mod.rs  schemas.rs
consultation-rs/src/protocol/: common.rs  consultation_event.rs  follow_up.rs  mod.rs  summary_note.rs
consultation-rs/src/provider_callback/: handler.rs  mod.rs  repo.rs  service.rs  state.rs
consultation-rs/src/repo/: enums.rs  mod.rs  prescreen.rs  provider_session_info.rs
consultation-rs/src/summarization/: follow_up_repo.rs  handler.rs  mod.rs  repo.rs  service.rs  state.rs
consultation-rs/src/sys/: config.rs  mod.rs
consultation-rs/src/sys/crypto/: kms.rs
consultation-rs/tests/: it_appointment_get_detail.rs  it_appointment_hold.rs  it_appointment_hold_database.rs  it_appointment_hold_schema.rs  it_appointment_list.rs  it_booking_outbox.rs  it_facial_verification.rs  it_internal_create_confirmed_apm.rs  it_kms_gcp.rs  it_repo.rs  it_reserved_timeslots.rs  it_summarization.rs  reserved_timeslots_contract_test.rs  token_and_room_test.rs
consultation-rs/tests/common/: mod.rs
db/: postgres.Dockerfile
db/biz_apm/: .sqruff  README.md  migrate.sh  v2_baseline.sql
db/doctor_schedule/: README.md
db/mssql/: init.sql
docs/: APPOINTMENT_FLOW.md  CONSULTATION_EVENT.md  DOCTORAPP_INTEGRATION.md  doctor-service-config-projection-rollout.md  index.md  star-gate-booking-timeslot-api.md
fixtures/: all_joined.json  doctor_joined.json  doctor_profile_approved_origin_main.json  empty_room_created.json  patient_joined.json  session_ended.json
(+117 files in other folders)
