[workspace]
resolver = "3"
members = ["consultation-rs", "consultation-bg-rs", "common-rs", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "json",
  "derive",
] }
jiff = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.15"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "1", features = ["aio", "tokio-comp"] }
deadpool-redis = "0.23"
utoipa = { version = "5" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-axum = "0.2"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"
paseto = "2.0"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
jsonwebtoken = "10"
bytes = { version = "1", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = "1.40.0"
url = { version = "2.5", features = ["serde"] }
common-rs = { path = "common-rs" }
consultation-rs = { path = "consultation-rs" }
