[package]
name = "common-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["gcp-pubsub", "sqlx", "openapi", "schema", "bytes"]
gcp-pubsub = []
sqlx = ["dep:sqlx"]
openapi = ["dep:utoipa", "utoipa/uuid"]
schema = []
bytes = ["dep:bytes"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9"
chrono = { workspace = true }
base64 = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
config = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }
sqlx = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
bigdecimal = { workspace = true }
rust_decimal = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
