[package]
name = "consultation-rs"
version = "0.1.0"
edition = "2024"

# [features]
# default = []
# openapi = ["dep:utoipa", "dep:utoipa-swagger-ui", "protocol-rs/openapi"]

[dependencies]
deadpool-redis = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
common-rs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
google-cloud-kms-v1 = "1.4"
google-cloud-gax = "1.6"
bytes = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio-retry = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
jiff = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
pasetors = { version = "0.7", features = ["v4", "paserk", "serde"] }
google-cloud-pubsub = "0.30"
google-cloud-googleapis = "0.16"
base64 = { workspace = true }
jiff-sqlx = { version = "0.1", features = ["postgres"] }
google-cloud-storage = "1.8.0"
google-cloud-auth = "1.5"
rustls = { version = "0.23", features = ["ring"] }
utoipa = { workspace = true, features = ["axum_extras", "uuid", "url"] }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-axum = { workspace = true }
clap = { workspace = true }
axum_typed_multipart = "0.16.5"
urlencoding = "2.1"
hmac = "0.12"
sha1 = "0.10"
serde_urlencoded = "0.7"

[dev-dependencies]
# Test dependencies are only available when running tests
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
serde_json = "1.0.149"
fs2 = "0.4"
tower = "0.5"

[lib]
# Make library modules available for testing
name = "consultation_rs"
path = "src/lib.rs"

[[bin]]
name = "consultation-rs"
path = "src/main.rs"

# [[test]]
# name = "it_repo"
# path = "tests"
# harness = true
